[gd_scene load_steps=5 format=3 uid="uid://g6r1yklrhfu8"]

[ext_resource type="StyleBox" uid="uid://82jd7b73sror" path="res://button_normal_outline.tres" id="1_iv5f5"]
[ext_resource type="Script" path="res://leaderboard.gd" id="1_qa6tx"]
[ext_resource type="StyleBox" uid="uid://ci2pv84glri5v" path="res://button_hover_outline.tres" id="2_8xxpc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlrgx"]
bg_color = Color(0.027451, 0.027451, 0.160784, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="MarginContainer" type="MarginContainer" groups=["leaderboard"]]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 100
script = ExtResource("1_qa6tx")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 200.0
offset_top = 100.0
offset_right = 952.0
offset_bottom = 548.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nlrgx")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
offset_right = 752.0
offset_bottom = 448.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 742.0
offset_bottom = 438.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
offset_right = 732.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 45
text = "Congratulations!"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 70.0
offset_right = 732.0
offset_bottom = 97.0
theme_override_constants/margin_bottom = 23

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
offset_right = 732.0
offset_bottom = 4.0

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 101.0
offset_right = 732.0
offset_bottom = 127.0
text = "You beat the game in 351.2 days."
horizontal_alignment = 1

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 131.0
offset_right = 732.0
offset_bottom = 157.0
text = "Leaderboard submissions require Normal difficulty."
horizontal_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 161.0
offset_right = 732.0
offset_bottom = 196.0
dragger_visibility = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer"]
offset_right = 187.0
offset_bottom = 35.0
theme_override_constants/margin_left = 130
theme_override_constants/margin_right = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer"]
offset_left = 130.0
offset_top = 4.0
offset_right = 177.0
offset_bottom = 30.0
text = "Name"

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer"]
offset_left = 187.0
offset_right = 732.0
offset_bottom = 35.0
dragger_visibility = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/HSplitContainer"]
offset_right = 330.0
offset_bottom = 35.0
size_flags_horizontal = 3

[node name="TextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/HSplitContainer/MarginContainer"]
offset_right = 330.0
offset_bottom = 35.0
placeholder_text = "A-Z, a-z, 0-9, _, -, and space only, sorry"
scroll_fit_content_height = true

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/HSplitContainer"]
offset_left = 330.0
offset_right = 545.0
offset_bottom = 35.0
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = -2
theme_override_constants/margin_right = 123

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/HSplitContainer/MarginContainer2"]
offset_left = 14.0
offset_top = -2.0
offset_right = 92.0
offset_bottom = 35.0
theme_override_styles/normal = ExtResource("1_iv5f5")
theme_override_styles/hover = ExtResource("2_8xxpc")
text = "  Submit  "

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 200.0
offset_right = 732.0
offset_bottom = 228.0
theme_override_constants/margin_top = 24

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2"]
offset_top = 24.0
offset_right = 732.0
offset_bottom = 28.0

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 232.0
offset_right = 732.0
offset_bottom = 428.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
offset_right = 732.0
offset_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
offset_right = 732.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "1. Arch - 3133.7 days"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
offset_top = 30.0
offset_right = 732.0
offset_bottom = 56.0
size_flags_horizontal = 3
text = "1. Arch - 3133.7 days"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
offset_top = 60.0
offset_right = 724.0
offset_bottom = 86.0
size_flags_horizontal = 3
text = "1. Arch - 3133.7 days"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
offset_top = 60.0
offset_right = 724.0
offset_bottom = 86.0
size_flags_horizontal = 3
text = "1. Arch - 3133.7 days"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
offset_top = 60.0
offset_right = 724.0
offset_bottom = 86.0
size_flags_horizontal = 3
text = "1. Arch - 3133.7 days"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
offset_top = 67.0
offset_right = 732.0
offset_bottom = 93.0
size_flags_horizontal = 3
text = "1. Arch - 3133.7 days"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
offset_top = 82.0
offset_right = 732.0
offset_bottom = 108.0
size_flags_horizontal = 3
text = "1. Arch - 3133.7 days"
horizontal_alignment = 1

[node name="Label8" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
offset_top = 97.0
offset_right = 732.0
offset_bottom = 123.0
size_flags_horizontal = 3
text = "1. Arch - 3133.7 days"
horizontal_alignment = 1

[node name="Label9" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
offset_top = 60.0
offset_right = 732.0
offset_bottom = 86.0
size_flags_horizontal = 3
text = "1. Arch - 3133.7 days"
horizontal_alignment = 1

[node name="Label10" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
offset_top = 90.0
offset_right = 732.0
offset_bottom = 116.0
size_flags_horizontal = 3
text = "1. Arch - 3133.7 days"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer"]
offset_left = 541.0
offset_top = 396.0
offset_right = 742.0
offset_bottom = 438.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/margin_right = 13
theme_override_constants/margin_bottom = 13

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/MarginContainer"]
offset_right = 188.0
offset_bottom = 29.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_styles/normal = ExtResource("1_iv5f5")
theme_override_styles/hover = ExtResource("2_8xxpc")
text = "  Return to Main Menu  "

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/HSplitContainer/MarginContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/HSplitContainer/MarginContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/MarginContainer/Button" to="." method="_on_menu_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
